# Todo-list-app-tkinter

./: .gitignore  pyproject.toml
app/: main.py
app/components/: __init__.py  category_card.py  category_component.py  category_form.py  category_list.py  main_component.py  task_card.py  task_component.py  task_form.py  task_list.py
app/config/: __init__.py  load_db_settings.py  provide_app_settings.py  provide_theme_settings.py
app/db/: __init__.py  init_sqlite.py  migration_ddl.py  sqlitte_db.py
app/repo/: __init__.py  repo.py
app/services/: __init__.py  category_service.py  task_service.py
app/types/: __init__.py  config.py  db_layer.py  db_models.py  query.py  repo_layer.py  response.py
app/utils/: __init__.py  datetime.py  db_query.py  generate_entity_id.py
todo_list_app_tk/: main.py
